Fixing the overlap in mobile view and spelling mistake

--- a/src/Components/Teaser/Teaser.css
+++ b/src/Components/Teaser/Teaser.css
@@ -38,7 +38,7 @@
 
 @media(max-width: 768px) {
   .teaser-container p {
-    min-height: 50px;
+    min-height: 80px;
   }
 }
 
